tests/valid/04_vars_mixto.patito
programa varsMixto;
vars
    contador : entero;
    promedio : flotante;
    i, j, k : entero;
    pi, e : flotante;
inicio
{
}
fin
