tests/invalid/05_tipo_invalido.patito
programa tipoMalo;
vars
    nombre : cadena;
inicio
{
}
fin
